# sshive

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PKGBUILD  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TRANSLATING.md  install_icon.sh  nfpm.yaml  nfpm.yml  org.sshive.SSHive.json  pyproject.toml  sshive.spec
.agent/: rules.md
.agents/rules/: code-style.md  common-workflows.md  testing.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
docs/: BACKUP_AND_RESTORE.md  KEYBOARD_SHORTCUTS.md  PUTTY_IMPORT.md
examples/: connections.json
scripts/: bump_version.py  dev_watch.py  install.sh  simulate_update.py  sshive.desktop
sshive/: __init__.py  ipc.py  main.py  updater.py
sshive/i18n/: en.ts  en_GB.ts
sshive/models/: connection.py  putty_importer.py  storage.py
sshive/resources/: icon.af
sshive/ssh/: launcher.py
sshive/ui/: about_dialog.py  add_dialog.py  icon_manager.py  main_window.py  settings_dialog.py  theme.py  update_dialog.py  utils.py
tests/: conftest.py  test_icon_manager.py  test_launcher.py  test_models.py  test_putty_importer.py  test_putty_storage_integration.py  test_storage.py  test_tunnels.py  test_ui.py
