[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sshive"
version = "0.0.0"
description = "Your hive of SSH connections - A modern SSH connection manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SSHive Contributors" }]
keywords = ["ssh", "terminal", "connection-manager", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["PySide6>=6.6.0", "qtawesome>=1.3.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-watcher>=0.6.3",
    "ruff>=0.1.0",
    "watchdog>=3.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
sshive = "sshive.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["scripts/vendor/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=sshive",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["sshive"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
patterns = ["*.py"]
ignore_patterns = []
